fixed an issue a popup overflows in upper town

--- a/src/content.css
+++ b/src/content.css
@@ -6,7 +6,7 @@ audio.naverdic-audio {
 }
 
 /*audio.naverdic-audio::-webkit-media-controls-panel {
-  background-color: #FFFFDD;
+  background-color: #FFF59D;
 }*/
 
 audio.naverdic-audio::-webkit-media-controls-timeline-container {
